--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,17 @@ Please see the CHANGES file for a more detailed list of specific bugs/patches
 that have been fixed/applied, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.3.4*
+
+    snmpd:
+      - Fix handling of multiple matching VACM entries.
+          (Use the "best" match, rather than the first one)
+	Note that this could potentially affect the behaviour
+	of existing access control configurations.
+
+      - Latch large-disk statistics at 2Tb (rather than wrapping)
+
+
 *5.3.3*
 
     snmplib:
