--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,18 @@ Please see the CHANGES file for a more detailed list of specific bugs/patches
 that have been fixed/applied, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.4.4*
+
+    snmplib:
+      - [BUG 3171878]: Using SNMPv3 context does not work
+
+    snmpd:
+      - Various 64-bit fixes
+
+    FreeBSD,NetBSD,OpenBSD:
+        Incorporate fixes from these O/S patch archives
+
+
 *5.4.3*
 
     snmpd:
