--- a/net-snmp/CHANGES
+++ b/net-snmp/CHANGES
@@ -3,6 +3,137 @@ that have been applied in released versions.  Please see the NEWS file for
 a summary of the major changes, and the ChangeLog file for a comprehensive
 listing of all changes made to the code. 
       
+* 5.4.4 *
+
+    snmplib:
+      - [BUG 3134323]: Fix crash when comparing invalid OIDs
+      - [BUG 3171878]: Using SNMPv3 context does not work
+      - [PATCH 3058645]: Use MSG_DONTWAIT for the unix domain socket
+      - [PATCH 3067540]: Fix IPv4 OID indexes on 64-bit big-endian systems
+      - [PATCH 3165878]: Catch buffer overrun on 64-bit systems
+      - Added public declaration for netsnmp_table_data_delete_table()
+      - Added function netsnmp_delete_table_data_set().
+      - Added function snmp_sess_session_lookup()
+      - Added macro netsnmp_static_assert()
+      - Avoid Valgrind complaints about uninitialized data
+      - Check the return value of strdup in netsnmp_create_data_list
+      - Fix double-free crash when releasing duplicated handlers
+      - Fixed memory corruption triggered by snmpd.conf "enum" keyword
+      - Fixed bugs in building/parsing 64-bit integers
+      - Fixed leaks-at-exit triggered by using the snmp_enum code
+      - Fixed memory leak in netsnmp_table_data_delete_table()
+      - Fixed memory leak triggered by duplicate se_add_pair_to_list()
+      - Fix issue with USM using inactive users
+      - Fixed potential buffer overflow when generating temp file names
+      - Invoking se_clear_slist() no longer creates a dangling pointer
+      - Use realloc+init instead of calloc
+
+    snmpd:
+      - [BUG 1840230]: Don't include nlmLogVariableIndex as (pseudo-)accessing column
+      - [BUG 2972579]: fixed checking of snmpTargetAddrRowStatus SET requests
+      - [BUG 3003981]: Protect against config parsing buffer overflow
+      - [BUG 3019243]: Register execFix compatability directive correctly
+      - [BUG 3058101]: Writeable 'int' instances don't work on 64-bit systems
+      - [BUG 3062538]: Fix com2sec* handling of non-default contexts
+      - [BUG 3151897]: fd leak with /proc/partitions read in diskio
+      - [BUG 3178389]: Fix inconsistent handling of TZ offsets
+      - [BUG 3185528]: shutdown_master_agent doesn't close UDP sockets
+      - [PATCH 2119725]: Fix skipNFSInHostResources handling of hrStorageTable
+      - [PATCH 2825653]: Fix sendmail.cf parsing in certain conditions
+      - [PATCH 2904900]: Documentation plus assorted handler code fixes
+      - [PATCH 2911361]: Remove redundant variables
+      - [PATCH 2941811]: Handle successful requests with reqID 0
+      - [PATCH 2975254]: Avoid callback re-use of closed sessions
+      - [PATCH 3053436]: Fix tcpConnectionTable_data_access invalid memory access
+      - [PATCH 3062526]: Fix security engineID setting in the trapsess directive
+      - [PATCH 3096725]: Don't register v1Trap callback, if SNMPv1 not supported
+      - [PATCH 3096725]: sysORTable registation for Notification Log mib
+      - [PATCH 3096725]: Include SNMPv1 trap OIDs in nlmLogNotificationID column
+      - [PATCH 3141462]: Fix agentx subagent issues with multiple-object requests
+
+      - Add newly created/destroyed interfaces to ipv6IfTable
+      - Call shutdown_master_agent() and shutdown_agent() during shutdown
+      - Don't deregister closed sessions
+      - Don't second-guess cache handler
+      - Fix clean_subtree() memory handling
+      - Fixed a double free, triggered by cleaning up embedded Perl data structure.
+      - Fixed adding new addresses to ipAddressTable
+      - Fixed logging of 'truncating integer value > 32 bits' in {IP,TCP}-MIB
+      - Fixed IP-MIB::ipIfStatsReasmReqds value
+      - Fixed potential buffer overflow in parsing OIDs in config files
+      - Fixed race conditions in hrSWRunTable and UCD prTable
+      - Fixed agent bogus 64-bit wrap warning (ipSystemStats)
+      - Fix engineid generation on outgoing v3 traps from the agent
+      - Fix VACM persistant storage.
+      - Optimizations for large route tables
+      - Use cache-unique id instead of handler name for shared cache reload protection
+      - Various MIB-specific leak-at-exit fixes.
+
+    snmptranslate:
+      - Fixed printing of ranges with UNSIGNED type
+
+    snmptrapd:
+      - [BUG 3151254]: Fix crash with invalid traphandle directive
+      - Fixed a double free, triggered by cleaning up embedded Perl data structure.
+
+    snmpusm:
+      - Correct ifdefs, remove dead variables
+
+    build:
+      - [BUG 3102904]: Compile all source files with -fno-strict-aliasing
+      - Do not call VACM APIs if VACM module is not included
+      - Fix autoconf detection of strcasecmp
+      - Fix building of static applications using net-snmp-config -*libs
+      - Fix definition of VERSION (number, not expression)
+
+    man:
+      - clean up manual pages (from Debian patch 56_manpage)
+
+    mib2c:
+      - Make the mib2c foreach ranges work as advertised
+
+    mibs:
+      - [PATCH 2974716]: Fix issues in the SMUX-MIB
+
+    perl:
+      - [PATCH 3046371]: Fix memory leak in SNMPv1 trap handling
+      - [PATCH 3049029]: Fix a memory leak with snmp bulkwalks
+      - Don't always open stderr as the calls to snmp_log already do this
+           and it messes up the agent when embedded
+      - Handle embedded %'s in the result message.
+
+    python:
+      - [BUG 3088360]: Ensure modules are built against the correct libraries
+      - [PATCH 3035328]: Check for failures in creating a session
+      - [PATCH 3035578]: Keep error codes up to date
+
+    testing:
+      - Support dynamic analysis of regression tests
+
+    Linux:
+      - [PATCH 3074918]: check for CONTAINER_INSERT failures
+      - [PATCH 3083027]: Fix RPM spec file to support CentOS
+      - [PATCH 3152412]: Handle (and report) problems reading /proc/vmstat
+      - Fix a strlen calculation in IF-MIB support
+      - Fixed value of IP-MIB::ipv6InterfaceForwarding
+
+    NetBSD:
+      - DragonFly support
+      - Retrieve MIB-II network statistics via sysctl
+      - Update memory and CPU statistics handling
+
+    OpenBSD:
+      - Support updating the routing table [From OpenBSD patch archive]
+
+    Win32:
+      - Avoid MSVC warning about redefining EADDRINUSE
+      - Fix out-of-range array accesses errors in mibII interfaces table
+      - Fix test T030 on MinGW.
+      - Fix test T200 failures on known Microsoft SNMP extension DLL bugs
+      - Halt snmpd process on key press when run from a command prompt
+          (To aid debugging snmpd.exe)
+
+      
 * 5.4.3 *
 
     snmplib:
