--- a/man/netsnmp_agent_handler.h.3
+++ b/man/netsnmp_agent_handler.h.3
@@ -1,4 +1,4 @@
-.TH "agent_handler.h" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "agent_handler.h" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -197,7 +197,7 @@ agent_handler.h \-
 .ti -1c
 .RI "void * \fBnetsnmp_request_get_list_data\fP (\fBnetsnmp_request_info\fP *request, const char *name)"
 .br
-.RI "\fIextract data from a request that was added previously by a parent \fBmodule\fP \fP"
+.RI "\fIextract data from a request that was added previously by a parent module \fP"
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_free_request_data_set\fP (\fBnetsnmp_request_info\fP *request)"
 .br
@@ -205,7 +205,7 @@ agent_handler.h \-
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_free_request_data_sets\fP (\fBnetsnmp_request_info\fP *request)"
 .br
-.RI "\fIFree the extra data stored in a bunch of requests (all data in the chain). \fP"
+.RI "\fIFree the extra data stored in a bunch of requests (all data in the chain) \fP"
 .ti -1c
 .RI "void \fBnetsnmp_handler_free\fP (\fBnetsnmp_mib_handler\fP *handler)"
 .br
