--- a/man/netsnmp_baby_steps.3
+++ b/man/netsnmp_baby_steps.3
@@ -1,4 +1,4 @@
-.TH "baby_steps" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "baby_steps" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -30,7 +30,7 @@ Calls your handler in baby_steps for set processing.
 Calls your handler in baby_steps for set processing. 
 .SH "Function Documentation"
 .PP 
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_baby_steps_handler_get (u_long modes)"
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_baby_steps_handler_get (u_longmodes)"
 .PP
 returns a baby_steps handler that can be injected into a given handler chain. 
 .PP
