--- a/man/netsnmp_container_iterator.3
+++ b/man/netsnmp_container_iterator.3
@@ -1,4 +1,4 @@
-.TH "Container_iterator" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "Container_iterator" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
