--- a/man/netsnmp_instance.3
+++ b/man/netsnmp_instance.3
@@ -1,4 +1,4 @@
-.TH "instance" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "instance" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -116,7 +116,7 @@ Returns a pointer to a netsnmp_mib_handler struct which contains the handler's n
 
 .PP
 Definition at line 49 of file instance.c.
-.SS "int netsnmp_instance_counter32_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"\fBDeprecated\fP
+.SS "int netsnmp_instance_counter32_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"\fBDeprecated\fP
 .RS 4
 This function is unused and scheduled for removal in Net-SNMP 5.6 
 .RE
@@ -124,7 +124,7 @@ This function is unused and scheduled for removal in Net-SNMP 5.6
 
 .PP
 Definition at line 572 of file instance.c.
-.SS "int netsnmp_instance_int_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"\fBDeprecated\fP
+.SS "int netsnmp_instance_int_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"\fBDeprecated\fP
 .RS 4
 This function is unused and scheduled for removal in Net-SNMP 5.6 
 .RE
@@ -132,7 +132,7 @@ This function is unused and scheduled for removal in Net-SNMP 5.6
 
 .PP
 Definition at line 689 of file instance.c.
-.SS "int netsnmp_instance_long_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"\fBDeprecated\fP
+.SS "int netsnmp_instance_long_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"\fBDeprecated\fP
 .RS 4
 This function is unused and scheduled for removal in Net-SNMP 5.6 
 .RE
@@ -140,12 +140,12 @@ This function is unused and scheduled for removal in Net-SNMP 5.6
 
 .PP
 Definition at line 611 of file instance.c.
-.SS "int netsnmp_instance_num_file_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"
+.SS "int netsnmp_instance_num_file_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"
 .PP
 fall through 
 .PP
 Definition at line 771 of file instance.c.
-.SS "int netsnmp_instance_uint_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"\fBDeprecated\fP
+.SS "int netsnmp_instance_uint_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"\fBDeprecated\fP
 .RS 4
 This function is unused and scheduled for removal in Net-SNMP 5.6 
 .RE
@@ -153,7 +153,7 @@ This function is unused and scheduled for removal in Net-SNMP 5.6
 
 .PP
 Definition at line 905 of file instance.c.
-.SS "int netsnmp_instance_ulong_handler (\fBnetsnmp_mib_handler\fP * handler, \fBnetsnmp_handler_registration\fP * reginfo, \fBnetsnmp_agent_request_info\fP * reqinfo, \fBnetsnmp_request_info\fP * requests)"\fBDeprecated\fP
+.SS "int netsnmp_instance_ulong_handler (\fBnetsnmp_mib_handler\fP *handler, \fBnetsnmp_handler_registration\fP *reginfo, \fBnetsnmp_agent_request_info\fP *reqinfo, \fBnetsnmp_request_info\fP *requests)"\fBDeprecated\fP
 .RS 4
 This function is unused and scheduled for removal in Net-SNMP 5.6 
 .RE
@@ -161,7 +161,7 @@ This function is unused and scheduled for removal in Net-SNMP 5.6
 
 .PP
 Definition at line 492 of file instance.c.
-.SS "int netsnmp_register_instance (\fBnetsnmp_handler_registration\fP * reginfo)"
+.SS "int netsnmp_register_instance (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
 This function registers an instance helper handler, which is a way of registering an exact OID such that GENEXT requests are handled entirely by the helper. First need to inject it into the calling chain of the handler defined by the netsnmp_handler_registration struct, reginfo. The new handler is injected at the top of the list and will be the new handler to be called first. This function also injects a serialize handler before actually calling netsnmp_register_handle, registering reginfo.
 .PP
@@ -182,7 +182,7 @@ MIB_REGISTERED_OK is returned if the registration was a success. Failures are MI
 \fBdelayed_instance.c\fP.
 .PP
 Definition at line 74 of file instance.c.
-.SS "int netsnmp_register_int_instance (const char * name, const oid * reg_oid, size_t reg_oid_len, int * it, Netsnmp_Node_Handler * subhandler)"
+.SS "int netsnmp_register_int_instance (const char *name, const oid *reg_oid, size_treg_oid_len, int *it, Netsnmp_Node_Handler *subhandler)"
 .PP
 This function registers an int helper handler to a specified OID. \fBParameters:\fP
 .RS 4
@@ -205,7 +205,7 @@ MIB_REGISTERED_OK is returned if the registration was a success. Failures are MI
 
 .PP
 Definition at line 475 of file instance.c.
-.SS "int netsnmp_register_read_only_instance (\fBnetsnmp_handler_registration\fP * reginfo)"
+.SS "int netsnmp_register_read_only_instance (\fBnetsnmp_handler_registration\fP *reginfo)"
 .PP
 This function injects a 'read only' handler into the handler chain prior to serializing/registering the handler. The only purpose of this 'read only' handler is to return an appropriate error for any requests passed to it in a SET mode. Inserting it into your handler chain will ensure you're never asked to perform a SET request so you can ignore those error conditions.
 .PP
