--- a/man/netsnmp_netsnmp_mib_handler_s.3
+++ b/man/netsnmp_netsnmp_mib_handler_s.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_mib_handler_s" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_mib_handler_s" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -55,9 +55,13 @@ Definition at line 48 of file agent_handler.h.
 .SS "int(* \fBnetsnmp_mib_handler_s::access_method\fP)(struct \fBnetsnmp_mib_handler_s\fP *, struct \fBnetsnmp_handler_registration_s\fP *, struct \fBnetsnmp_agent_request_info_s\fP *, struct \fBnetsnmp_request_info_s\fP *)"
 .PP
 if you add more members, you probably also want to update _clone_handler in \fBagent_handler.c\fP. 
+.PP
+Definition at line 58 of file agent_handler.h.
 .SS "void(* \fBnetsnmp_mib_handler_s::data_free\fP)(void *\fBmyvoid\fP)"
 .PP
 data free hook for myvoid 
+.PP
+Definition at line 64 of file agent_handler.h.
 .SS "int \fBnetsnmp_mib_handler_s::flags\fP"
 .PP
 for agent_handler's internal use 
