--- a/man/netsnmp_table_iterator.h.3
+++ b/man/netsnmp_table_iterator.h.3
@@ -1,4 +1,4 @@
-.TH "table_iterator.h" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "table_iterator.h" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
