--- a/man/netsnmp_table_row.3
+++ b/man/netsnmp_table_row.3
@@ -1,4 +1,4 @@
-.TH "table_row" 3 "25 Feb 2011" "Version 5.5.1.rc2" "net-snmp" \" -*- nroff -*-
+.TH "table_row" 3 "Fri Mar 18 2011" "Version 5.5.1" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -26,12 +26,12 @@ Helps you implement a table shared across two or more subagents, or otherwise sp
 Helps you implement a table shared across two or more subagents, or otherwise split into individual row slices. 
 .SH "Function Documentation"
 .PP 
-.SS "void* netsnmp_table_row_extract (\fBnetsnmp_request_info\fP * request)"
+.SS "void* netsnmp_table_row_extract (\fBnetsnmp_request_info\fP *request)"
 .PP
 return the row data structure supplied to the table_row helper 
 .PP
 Definition at line 158 of file table_row.c.
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_table_row_handler_get (void * row)"
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_table_row_handler_get (void *row)"
 .PP
 returns a netsnmp_mib_handler object for the table_container helper 
 .PP
